# Algoritmo-VLC-de-recepcion

./: CMakeLists.txt  Sigma_calculate.cpp
